# LKDS_practice

./: .gitignore  CMakeLists.txt  LKDS_practice.pro  README.md  Source.qrc  main.cpp  main.qml
ArduinoProgram/230209-093355-nanoatmega328/: platformio.ini
Controller/: controller_allbase.cpp  controller_allbase.h  controller_databasemanager.cpp  controller_databasemanager.h  controller_keytable.cpp  controller_keytable.h
Controller/SerialManager/: ControllerSerialManager.cpp  ControllerSerialManager.h
DataBase/: LKDS_Base.db
DesktopApplication/: .gitignore  LKDS_practice.pro  Source.qrc  main.qml  resources.rc
DesktopApplication/Controller/: controller_allbase.cpp  controller_allbase.h  controller_databasemanager.cpp  controller_databasemanager.h  controller_keytable.cpp  controller_keytable.h
DesktopApplication/DataBase/: LKDS_Base.db
DesktopApplication/Model/: model_database.cpp
Model/: model_database.cpp  model_database.h
Model/CBModel/: cbmodel.cpp  cbmodel.h  cbmodel_secwin.cpp  cbmodel_secwin.h
Model/COMPortModel/: COMPortModel.cpp  COMPortModel.h
Model/SerialManager/: ModelSerialManager.cpp  ModelSerialManager.h
View/FifthWindow/: AddCustom.qml  AddReg.qml  FifthWindow.qml  TableModeler_fw.qml  fifthwindow.cpp  fifthwindow.h
View/FirstWindow/: FirstWindow.qml  firstwindow.cpp  firstwindow.h
View/FouthWindow/: FouthWindow.qml  fouthwindow.cpp  fouthwindow.h
build-LKDS_practice-Desktop_Qt_6_4_2_MinGW_64_bit-Release/: Source_qmlcache.qrc  build_LKDS_practice_Desktop_Qt_6_4_2_MinGW_64_bit_Release_debug_qmake_resources_qmlcache.qrc
(+41 files in other folders)
